<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common Strings -->
    <string name="app_name">Indoor Navigator</string>
    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    
    <!-- Activity Start -->
    <string name="ASLocationMessage">For a better performance enable the Location services, and make sure that the high precision mode is enabled</string>
    <string name="ASEnablingBt">Enabling Bluetooth</string>

    <!-- Fragment Splashscreen -->
    <string name="SLogoDesc">Logo</string>
    <string name="FSAccountHint">Account</string>
    <string name="FSAccountError">Enter account</string>
    <string name="FSPasswordHint">Password</string>
    <string name="FSPasswordError">Enter password</string>
    <string name="FSConnecting">Connecting&#8230;</string>
    <string name="FSConnectError">Cannot connect to server</string>
    <string name="FSLibError">Indoor library cannot be started</string>
    <string name="FSGraph">Building graph&#8230;</string>
    <string name="FSGraphError">Graph cannot be built</string>
    <string name="FSConnectUsernameError">Invalid account</string>
    <string name="FSConnectPasswordError">Invalid password</string>
    
    <!-- Help -->
    <string name="HText">Do you need credentials, help or user guide? Contact us at indoor@onyourmap.com</string>
    
    <!-- Fragment Upper Bar -->
    <string name="FUBDestination">Destination</string>
    <string name="FUBLevel">Floor</string>
    <string name="FUBYouAre">You are at</string>
    <string name="FUBSaved">Marker</string>
    
    <!-- Activity Map -->
    <string name="AMTitle">Map</string>
    <string name="AMDestination">Destination</string>
    <string name="AMGettingRoute">Computing route&#8230;</string>
    <string name="AMCustomDest">Custom Destination</string>

    <!-- Activity Map Notifications -->
    <string name="AMNTitle">Notification</string>
    <string name="AMNEnter">Entering</string>
    <string name="AMNStay">Staying at</string>
    <string name="AMNLeave">Leaving</string>
    <string name="AMNNearby">Nearby</string>

    <!-- Activity Map Dialog -->
    <string name="AMDTitle">Close app?</string>
    <string name="AMDNav">Navigation will not be available</string>
    <string name="AMDMap">Indoor map will not be available</string>

    <!--Activity Map Toast -->
    <string name="AMTNoInternet">No internet connection is available. App features might be limited</string>
    <string name="AMTNoBt">Bluetooth has been disabled. Indoor location will not be available</string>
    <string name="AMTNoBuildings">No building has been created yet</string>
    <string name="AMTNoEdges">Navigation network for %1$s is not created</string>
    <string name="AMTNoRoute">Route cannot be computed to %1$s</string>
    <string name="AMTMarkerNoIndoor">Only indoor markers can be stored</string>

    <!-- Fragment Drawer -->
    <string name="FDStop">Stop navigation</string>
    <string name="FDAreas">Places</string>
    <string name="FDNoAreas">No places available</string>
    <string name="FDStoreTitle">Marker</string>    
    <string name="FDStore">Save</string>
    <string name="FDStoreToast">Marker saved</string>
    <string name="FDUpdate">Update</string>
    <string name="FDUpdateToast">Marker updated</string>
    <string name="FDRestore">Navigate</string>
    <string name="FDDelete">Delete</string>    
    <string name="FDDeleteToast">Marker deleted</string>
    <string name="FDUserProfile">Profile</string>
    <string name="FDOptions">@string/options</string>

    <!-- Fragment UserProfile -->
    <string name="FUPUser">User</string>
    <string name="FUPNavigation">Navigation</string>
    <string name="FUPNoSettings">Settings are not set</string>
    <string name="FUPSaved">Your profile has been updated</string>
    <string name="FUPNotSaved">Your profile cannot be updated</string>
    <string name="FUPNoSettingsText">No settings defined in the backoffice yet</string>

    <!-- Fragment Preferences Options -->
    <string name="FPOLocationSection">Location Settings</string>
    <string name="FPOLocationAlgKey" translatable="false">FPOLocationAlgKey</string>
    <string name="FPOLocationAlgTitle">Location Algorithm</string>
    <string name="FPOLocationAlgSummary">Using %1$s algorithm</string>
    <string name="FPOBetaSection">Beta features</string>
    <string name="FPOForceScanKey" translatable="false">FPOForceScanKey</string>
    <string name="FPOForceScanTitle">Force scan</string>
    <string name="FPOForceScanSummary">Restarts beacon scan periodically</string>


</resources>
