<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/SLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/SLogoDesc"
        android:maxHeight="180dp"
        android:maxWidth="180dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo" />
    
    <TextView
                android:id="@+id/LAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/SLogo"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/SLoginLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SProgressLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/SAccountTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whiteHint"
            app:errorTextAppearance="@style/TextErrorYellow" >
            <EditText
                android:id="@+id/SAccountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/FSAccountHint"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:textColor="@color/white">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/SPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whiteHint"
            app:errorTextAppearance="@style/TextErrorYellow" >
            <EditText
                android:id="@+id/SPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/FSPasswordHint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/white" >
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/SButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_login"
            android:stateListAnimator="@anim/raise"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SProgressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <ProgressBar
            android:id="@+id/SProgressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/STextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/FSConnecting"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SInfoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <ImageView
            android:id="@+id/SInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help_white_24dp"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/SInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>